--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,5 +7,11 @@
 <body>
 <p th:text="${person.getId()}">VALUE</p>
 <p th:text="${person.getName()}">VALUE</p>
+<br>
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+<br>
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
+    <input type="submit" value="Delete Person">
+</form>
 </body>
 </html>
