--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Person</title>
 </head>
 <body>
 <p th:text="${person.getId()}">VALUE</p>
-<p th:text="${person.getName()}">VALUE</p>
+<p th:text="${person.getName() + ', ' + person.getAge()}">VALUE</p>
+<p th:text="${person.getEmail()}">VALUE</p>
 <br>
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 <br>
